--- a/perfilcoche.ui
+++ b/perfilcoche.ui
@@ -204,7 +204,7 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>330</y>
+     <y>320</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -217,7 +217,7 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>310</y>
+     <y>300</y>
      <width>51</width>
      <height>21</height>
     </rect>
@@ -230,7 +230,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>320</y>
+     <y>310</y>
      <width>31</width>
      <height>31</height>
     </rect>
@@ -240,6 +240,19 @@
    </property>
    <property name="pixmap">
     <pixmap resource="Imagenes.qrc">:/imagenes/viaje.png</pixmap>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>360</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Guardar</string>
    </property>
   </widget>
  </widget>
